--- a/paper.bib
+++ b/paper.bib
@@ -195,13 +195,13 @@ year = {2013}
   title = {Virtual {CPE} and Software Defined Networking},
 	Howpublished = {\url{http://www.ericsson.com/res/docs/2014/virtual-cpe-and-software-defined-networking.pdf}},}
 
-@misc{sp:openflow1.3,
-  title={OpenFlow Switch Specification},
-  number={1.3.0},
-  organization={Open Networking Foundation},
-  year={2012},
-  month={June},
-  Howpublished = {\url{https://www.opennetworking.org/images/stories/downloads/sdn-resources/onf-specifications/openflow/openflow-spec-v1.3.0.pdf}},}
+@misc{sp:openflow13,
+  title = {OpenFlow Switch Specification},
+  number = {1.3.0},
+  organization = {Open Networking Foundation},
+  year = {2012},
+  month = {June},
+  Howpublished  =  {\url{https://www.opennetworking.org/images/stories/downloads/sdn-resources/onf-specifications/openflow/openflow-spec-v1.3.0.pdf}},}
 
 @misc{sp:openflow1.5,
   title={OpenFlow Switch Specification},
@@ -393,6 +393,9 @@ year = {2013}
 @misc{edge-core-switch,
   title = {{Edge Core switches}},
   Howpublished = {\url{http://www.edge-core.com/productsKind.php?cls=1}},}
+@misc{lagopus-switch,
+  title = {{Edge Core switches}},
+  Howpublished = {\url{http://www.lagopus.org/}},}
 
 @misc{hp-switch,
   title = {{HP OpenFlow-enabled switches}},
