--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -78,7 +78,7 @@ SDN, vCPE, VNF, NFV, OpenFlow
 \section{Introduction}
 \IEEEPARstart{S}{DN}\cite{sdn-new-norm}, \cite{sdn-comprehensive} has been developing almost a decade since the first Openflow article had be presented in 2008\cite{openflow-campus-network}. Openflow\cite{sp:openflow13} gives a brand new viewpoint on network research, and makes innovation on industries. This technic proposed not just a novel architecture but also bring out more methods of flexible traffic engineering. After tons of implementations and researches had been proposed, this architecture exposed some weakness in performance. The main concept of this architecture is separating data plane and control plane that put smart control and multi-path into real world. But legacy hardware design eventually put this perfect design into reality. To achieve high speed packet exchange, ternary content-addressable memory (TCAM) plays an important role in legacy fabric switching. This hardware design speed up the packet switching but it also cause high cost and less size problems.
 In the beginning, most of SDN switch used legacy hardware design and just add software API support for temporary solution. The smaller TCAM size comes the less flow control rules but it can keep high performance in packet switching. It brings out inter-datacenter dynamic traffic routing because that scenario doesn’t need much flow entries.
-At the same time as SDN was developed, Network Function Virtualization (NFV)\cite{nfvwp},\cite{nfv-survey},\cite{laptop-sdn} has been introduced by Telco operators. Operators want to reduce their cost on maintaining old telco platform which may has been operated in 50 years. To replace the old platform with high maintenance cost, they use virtual machine (VM) based on new computers as solutions. This method can really save a lot of money in maintaining old platform but not all of operators have the same requirement as AT\&T; there is another idea about reducing OPEX and CAPEX in enterprise networks that is vCPE which was innovated by NEC\cite{nec-vcpe}. vCPE manage network functions on operation side to reduce cost which was deployed on cloud. Although both of technical ideas are perfect, it still address two critical problems. The first one is the lack of hardware support because these ideas need large size of flow tables to achieve multi VNF support. And the other is VM based on cloud may slow down the high speed network exchanging network\cite{nfv-placemet},\cite{nfv-placement-model}.
+At the same time as SDN was developed, Network Function Virtualization (NFV)\cite{nfvwp},\cite{nfv-survey},\cite{laptop-sdn} has been introduced by Telco operators. Operators want to reduce their cost on maintaining old telco platform which may has been operated in 50 years. To replace the old platform with high maintenance cost, they use virtual machine (VM) based on new computers as solutions. This method can really save a lot of money in maintaining old platform but not all of operators have the same requirement as AT\&T; there is another idea about reducing OPEX and CAPEX in enterprise networks that is vCPE which was innovated by NEC\cite{nec-vcpe}. vCPE manage network functions on operation side to reduce cost which was deployed on cloud \cite{cloud4nfv}. Although both of technical ideas are perfect, it still address two critical problems. The first one is the lack of hardware support because these ideas need large size of flow tables to achieve multi VNF support. And the other is VM based on cloud may slow down the high speed network exchanging network\cite{nfv-placemet},\cite{nfv-placement-model}.
 From Pica8\cite{pica8-switch} finished their first OpenFlow switches, there are so many implementation method on a SDN switch. Even Open Network Foundation (ONF)\cite{onf} has a series of testing processes, it can’t shows completely testing result of SDN switch especially performance. Let us take flow entries as example, there are single flow table and multiple flow table architectures much more based on hardware or software. Bandwidth control APIs have been an option in OpenFlow 1.3 but there are many switches still didn’t support these API. Even it did support, there are still at least two implementation methods should be noticed. Meters and per queue show different ways controlling bandwidth not mention to accuracy of bandwidth.
 Service chain\cite{service-chain} is another concept with vCPE framework because enterprise will apply a bulk of network services. This technic inherit weakness of SDN switches and vCPE so there is no standard to unified interface to link all services. It’s hard to combine and link all switches and cloud service in such complex situation. Different services on cloud must be working fine with different SDN switches and we believe that’s why most of service chain was implemented in VM on the cloud.
 
@@ -98,7 +98,7 @@ This paper is structured as follows. Section II introduce the overall architectu
 
 \section{System Description}
 \subsection{Overview of Network Function}\label{ssec:desc_nfv_overview}
-With the concept of SDN-enabled VNFs\cite{sdn-enabled}\cite{manage-nve}, SDN technology work not only for traffic steering but also as a part of network functions. In this idea, network functions have been achieved by the synergies between computer infrastructures(NFV) and network infrastructures(NFVI)\cite{nfv2014-v121}\cite{nfv2014-v111}\cite{nfv2015}, shown in Fig. \ref{fig:desc_nfv_overview}. The former is a VNF controller, mainly responsible for dealing with stateful processing. The latter is a SDN switch used for stateless processing.
+With the concept of SDN-enabled VNFs\cite{sdn-enabled}\cite{manage-nve}, SDN technology work not only for traffic steering but also as a part of network functions. In this idea, network functions have been achieved by the synergies between computer infrastructures(NFV) and network infrastructures(NFVI)\cite{nfv2014-v121},\cite{nfv2015}, shown in Fig. \ref{fig:desc_nfv_overview}. The former is a VNF controller, mainly responsible for dealing with stateful processing. The latter is a SDN switch used for stateless processing.
 
 \subsubsection{Stateful Processing Component (VNF controller in container)}
 This component have to control the workflow, keep the state associated with the VNF, and provide interface for service providers or customers to configure and update the behavior of the stateless datapath processing component. We use SDN controller to implement the NFV controller and it’s worth noting that we use southbound APIs of SDN controller framework to handle the interface between the stateful and stateless component with OpenFlow protocol, which was originally designed for this.
@@ -132,7 +132,7 @@ Fig. \ref{fig:desc_service_deployment} illustrates the service deployment model.
 
 
 \subsection{Architecture of the vCPE System}
-The architecture as shown in Fig. \ref{fig:desc_vcpe_framework} including of a Infrastructure Controller, Infrastructure Orchestrator, Cloud Database, VNF Controllers and VNF Orchestrator.
+The architecture of the vCPE system is adapted from \cite{nfv2014-v111}, shown in Fig. \ref{fig:desc_vcpe_framework}, including of a Infrastructure Controller, Infrastructure Orchestrator, Cloud Database, VNF Controllers and VNF Orchestrator.
 The Infrastructure Orchestrator, VNF Orchestrator and Cloud Database are web servers
 Each component is introduced in the subsection below.
 
@@ -670,6 +670,7 @@ He is a graduate student and major in Computer Science from National Tsing Hua U
 \end{IEEEbiography}
 
 \begin{IEEEbiography}
+[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{./avatars/che-chuan.jpg}}]
 {Che-Chuan Li} was born in Tainan City, Taiwan, in 1993. He received the B.S. degree in computer science from National Tsing Hua University, Hsinchu, Taiwan, in 2015. He is currently pursuing the M.S. degree in computer science at National Tsing Hua University, Hsinchu, Taiwan.
 \end{IEEEbiography}
 
